[gd_scene load_steps=11 format=2]

[ext_resource path="res://addons/Todot/Src/Card/CardDetails.gd" type="Script" id=1]
[ext_resource path="res://addons/Todot/Roboto-Light.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://addons/Todot/Assets/ChecklistFilled.svg" type="Texture" id=3]
[ext_resource path="res://addons/Todot/Assets/Todo.svg" type="Texture" id=4]
[ext_resource path="res://addons/Todot/Assets/Description.svg" type="Texture" id=5]
[ext_resource path="res://addons/Todot/Src/Title/Title.tscn" type="PackedScene" id=6]
[ext_resource path="res://addons/Todot/Src/Checklist/AddChecklistPopup.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=5]
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
size = 17
use_filter = true
font_data = ExtResource( 2 )

[node name="CardDetails" type="WindowDialog"]
visible = true
margin_right = 500.0
margin_bottom = 500.0
rect_min_size = Vector2( 550, 500 )
window_title = "Edit Card"
resizable = true
script = ExtResource( 1 )

[node name="VBox" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
custom_constants/separation = 20

[node name="TitleArea" type="HBoxContainer" parent="VBox"]
margin_right = 530.0
margin_bottom = 40.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="VBox/TitleArea"]
margin_right = 31.248
margin_bottom = 40.0
rect_min_size = Vector2( 31.248, 40 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" parent="VBox/TitleArea" instance=ExtResource( 6 )]
unique_name_in_owner = true
margin_left = 41.0
margin_right = 530.0
margin_bottom = 40.0
rect_min_size = Vector2( 280, 40 )

[node name="DescriptionArea" type="HBoxContainer" parent="VBox"]
margin_top = 60.0
margin_right = 530.0
margin_bottom = 183.0
custom_constants/separation = 10

[node name="DescriptionIcon" type="TextureRect" parent="VBox/DescriptionArea"]
margin_right = 32.0
margin_bottom = 40.0
rect_min_size = Vector2( 32, 40 )
size_flags_vertical = 0
texture = ExtResource( 5 )
expand = true
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="VBox/DescriptionArea"]
margin_left = 42.0
margin_right = 530.0
margin_bottom = 123.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DescriptionLabel" type="Label" parent="VBox/DescriptionArea/VBoxContainer"]
margin_right = 488.0
margin_bottom = 19.0
size_flags_vertical = 7
custom_fonts/font = SubResource( 5 )
text = "Description"
valign = 1

[node name="Description" type="TextEdit" parent="VBox/DescriptionArea/VBoxContainer"]
unique_name_in_owner = true
margin_top = 23.0
margin_right = 488.0
margin_bottom = 123.0
rect_min_size = Vector2( 0, 100 )
hint_tooltip = "Description"
wrap_enabled = true

[node name="ChecklistArea" type="HBoxContainer" parent="VBox"]
margin_top = 203.0
margin_right = 530.0
margin_bottom = 480.0
size_flags_vertical = 3
custom_constants/separation = 20

[node name="ChecklistArea" type="Panel" parent="VBox/ChecklistArea"]
self_modulate = Color( 1, 1, 1, 0.34902 )
margin_right = 350.0
margin_bottom = 277.0
rect_min_size = Vector2( 350, 0 )
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_editor_description_": ""
}

[node name="ChecklistScroll" type="ScrollContainer" parent="VBox/ChecklistArea/ChecklistArea"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0

[node name="ChecklistContainer" type="VBoxContainer" parent="VBox/ChecklistArea/ChecklistArea/ChecklistScroll"]
unique_name_in_owner = true
margin_right = 340.0
size_flags_horizontal = 3
custom_constants/separation = 10

[node name="AddTaskArea" type="Panel" parent="VBox/ChecklistArea"]
self_modulate = Color( 1, 1, 1, 0.34902 )
margin_left = 370.0
margin_right = 530.0
margin_bottom = 277.0
mouse_filter = 1
size_flags_horizontal = 3
__meta__ = {
"_editor_description_": ""
}

[node name="ScrollContainer" type="ScrollContainer" parent="VBox/ChecklistArea/AddTaskArea"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBox/ChecklistArea/AddTaskArea/ScrollContainer"]
margin_right = 160.0
margin_bottom = 63.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBox/ChecklistArea/AddTaskArea/ScrollContainer/VBoxContainer"]
margin_right = 160.0
margin_bottom = 24.0
custom_colors/font_color = Color( 0.698039, 0.698039, 0.698039, 1 )
custom_fonts/font = SubResource( 7 )
text = "Add:"
align = 1

[node name="HSeparator" type="HSeparator" parent="VBox/ChecklistArea/AddTaskArea/ScrollContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 160.0
margin_bottom = 32.0

[node name="AddChecklist" type="Button" parent="VBox/ChecklistArea/AddTaskArea/ScrollContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 160.0
margin_bottom = 63.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 8 )
text = "Checklist"
icon = ExtResource( 3 )
flat = true
align = 0
expand_icon = true

[node name="Dialogs" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="AddChecklistPopup" parent="Dialogs" instance=ExtResource( 7 )]

[connection signal="pressed" from="VBox/ChecklistArea/AddTaskArea/ScrollContainer/VBoxContainer/AddChecklist" to="." method="_on_AddChecklist_pressed"]
[connection signal="add_checklist" from="Dialogs/AddChecklistPopup" to="." method="add_checklist"]
